[package]
name = "rusty_lr"
version = "4.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "A Bison-inspired parser generator and compiler frontend framework for Rust, with IELR(1), LALR(1), GLR, and LSP support."
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing", "compilers", "parser-implementations"]

[dependencies]
rusty_lr_core = { version = "4.6.0", path = "../rusty_lr_core" }
rusty_lr_derive = { version = "2.52.0", path = "../rusty_lr_derive", optional = true }
rusty_lr_buildscript = { version = "0.71.0", path = "../rusty_lr_buildscript", optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["derive"]
build = ["dep:rusty_lr_buildscript"]
derive = ["dep:rusty_lr_derive"]
tree = ["rusty_lr_core/tree"]
