[package]
name = "rusty_lr_buildscript"
version = "0.57.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "buildscipt tools for rusty_lr"
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]


[dependencies]
rusty_lr_parser = { version = "3.59.0", path = "../rusty_lr_parser" }
rusty_lr_core = { version = "3.35.0", path = "../rusty_lr_core" }
codespan-reporting = "0.12"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
quote = "1.0"

[features]
default = []
