[package]
name = "rusty_lr_buildscript"
version = "0.69.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Build script helpers for RustyLR, a Bison-inspired parser generator for Rust."
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]


[dependencies]
rusty_lr_parser = { version = "4.4.0", path = "../rusty_lr_parser" }
rusty_lr_core = { version = "4.4.0", path = "../rusty_lr_core", features = [
    "builder",
] }
codespan-reporting = "0.13"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
quote = "1.0"

[features]
default = []
