[package]
name = "rusty_lr_core"
version = "3.18.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "core library for rusty_lr"
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[dependencies]
rustc-hash = "2.1"
termtree = { version = "0.5", optional = true }

[features]
default = []
# use `rustc-hash` crate for hash map
fxhash = []
tree = ["dep:termtree"]
error = []
