[package]
name = "rusty_lr_core"
version = "3.37.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "core library for rusty_lr"
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[dependencies]
rustc-hash = "2.1"
termtree = { version = "0.5", optional = true }
smallvec = { version = "1.15" }

[features]
default = []
builder = []
tree = ["dep:termtree"]
