[package]
name = "rusty_lr_core"
version = "4.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Core runtime and table definitions for RustyLR, a Bison-inspired parser generator for Rust."
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[dependencies]
rustc-hash = "2.1"
termtree = { version = "1.0", optional = true }
arrayvec = "0.7"

[features]
default = []
builder = []
tree = ["dep:termtree"]
