[package]
name = "rusty_lr_derive"
version = "1.15.0"
edition = "2021"
license = "MIT"
description = "proc-macro definitions for rusty_lr"
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
# rusty_lr_parser = { path = "../rusty_lr_parser" }
rusty_lr_parser = "3.13.0"
