[package]
name = "rusty_lr_derive"
version = "2.23.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "proc-macro definitions for rusty_lr"
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
rusty_lr_parser = { version = "3.44.0", path = "../rusty_lr_parser" }
quote = "1.0"


[features]
default = []
tree = ["rusty_lr_parser/tree"]
fxhash = []
