[package]
name = "rusty_lr_derive"
version = "2.49.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Procedural macros for RustyLR, a Bison-inspired parser generator for Rust."
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
rusty_lr_parser = { version = "4.3.0", path = "../rusty_lr_parser" }
quote = "1.0"


[features]
default = []
