[package]
name = "rustylr"
version = "1.37.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "CLI and LSP server for RustyLR, a Bison-inspired parser generator and compiler frontend framework for Rust."
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rusty_lr_buildscript = { version = "0.71.0", path = "../rusty_lr_buildscript" }
rusty_lr_core = { version = "4.6.0", path = "../rusty_lr_core", features = [
    "builder",
] }
rusty_lr_parser = { version = "4.6.0", path = "../rusty_lr_parser" }
lsp-server = "0.8.0"
lsp-types = "0.97.0"
prettyplease = "0.2"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
