[package]
name = "rusty_lr_parser"
version = "3.20.0"
edition = "2021"
license = "MIT"
description = "macro line parser for rusty_lr"
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0"
rusty_lr_core = { version = "2.12.0", path = "../rusty_lr_core", features = [
  "builder",
] }

[features]
default = []
tree = []
fxhash = ["rusty_lr_core/fxhash"]
