[package]
name = "rusty_lr_parser"
version = "3.57.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "grammar line parser for rusty_lr"
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0"
rusty_lr_core = { version = "3.33.0", path = "../rusty_lr_core" }
syn = { version = "2.0", features = ["extra-traits"] }

[features]
default = []
tree = []
fxhash = []
