[package]
name = "rusty_lr_parser"
version = "4.4.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Grammar parser for RustyLR, a Bison-inspired parser generator for Rust."
repository = "https://github.com/ehwan/RustyLR"
readme = "../README.md"
keywords = ["parser", "bison", "lr", "glr", "compiler"]
categories = ["parsing"]

[dependencies]
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
quote = "1.0"
rusty_lr_core = { version = "4.4.0", path = "../rusty_lr_core", features = [
    "builder",
] }
syn = { version = "2.0", features = ["extra-traits", "full"] }

[features]
default = []
